修复通知界面乱码，增加消息删除与通知删除功能